Minimal Integration Test for Rest Controller passes java 10.0.2 3.0.0-alpha-3